crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Try(
        Try {
            body: Block {
                items: [],
                last: Some(
                    GetVar(
                        GetVar {
                            name: "a",
                        },
                    ),
                ),
            },
            catch: (
                "e",
                Block {
                    items: [],
                    last: Some(
                        GetVar(
                            GetVar {
                                name: "e",
                            },
                        ),
                    ),
                },
            ),
        },
    ),
)
