crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-21.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Try {
        body: Block {
            items: [
                GetVar {
                    name: "a",
                },
                GetVar {
                    name: "b",
                },
            ],
            last: None,
        },
        catch: (
            "e",
            Block {
                items: [
                    GetVar {
                        name: "e",
                    },
                ],
                last: None,
            },
        ),
    },
)
