crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-22.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Try {
    body: Block {
        items: [],
        last: Some(
            Class {
                target: Path {
                    segments: [
                        Segment {
                            ident: "T",
                            generic_args: [],
                        },
                    ],
                },
                fields: [
                    (
                        "v",
                        Try {
                            body: Block {
                                items: [],
                                last: Some(
                                    Class {
                                        target: Path {
                                            segments: [
                                                Segment {
                                                    ident: "T",
                                                    generic_args: [],
                                                },
                                            ],
                                        },
                                        fields: [],
                                    },
                                ),
                            },
                            catch: (
                                "e",
                                Block {
                                    items: [],
                                    last: Some(
                                        GetVar {
                                            name: "e",
                                        },
                                    ),
                                },
                            ),
                        },
                    ),
                ],
            },
        ),
    },
    catch: (
        "e",
        Block {
            items: [],
            last: Some(
                GetVar {
                    name: "e",
                },
            ),
        },
    ),
}
