crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-23.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Try {
        body: Block {
            items: [],
            last: Some(
                Call {
                    opt: false,
                    target: GetIndex {
                        opt: false,
                        target: GetField {
                            opt: false,
                            target: GetVar {
                                name: "a",
                            },
                            key: "b",
                        },
                        key: GetVar {
                            name: "c",
                        },
                    },
                    args: [
                        GetVar {
                            name: "d",
                        },
                    ],
                },
            ),
        },
        catch: (
            "e",
            Block {
                items: [],
                last: Some(
                    GetVar {
                        name: "e",
                    },
                ),
            },
        ),
    },
)
