crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_try-3.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Try {
            body: Block {
                items: [],
                last: Some(
                    GetVar {
                        name: "a",
                    },
                ),
            },
            catch: (
                "e",
                Block {
                    items: [],
                    last: Some(
                        GetVar {
                            name: "e",
                        },
                    ),
                },
            ),
        },
    ),
    [],
)
